# SlicerCineTrack

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  Track.png.REMOVED.git-id  def1.trackpackage.7z.REMOVED.git-id
.github/workflows/: build-test.yml
Track/: .gitignore  CMakeLists.txt  Helper.py  Pro.py  README.md  Track.py  Transforms.csv
Track/Data/: 00002.mha  00003.mha  00004.mha  00006.mha  00008.mha  00010.mha  00012.mha  00014.mha  00016.mha  00020.mha  00021.mha  00024.mha  00025.mha  00026.mha  00030.mha  00031.mha  00032.mha  00033.mha  00034.mha  00035.mha  00036.mha  00038.mha  00041.mha  00043.mha  00044.mha  00049.mha  00050.mha  00055.mha  00056.mha  00058.mha  00060.mha  00062.mha  00065.mha  00066.mha  00069.mha  Segmentation.mha.REMOVED.git-id  Segmentation_nrrd.nrrd  Stack1.mha  Stack2.mha  Transforms-mac.csv  (+6 more)
Track/Data/2D CIne Images/: 00000.mha  00001.mha  00009.mha  00013.mha  00017.mha  00019.mha  00022.mha  00023.mha  00028.mha  00029.mha  00037.mha  00039.mha  00042.mha  00046.mha  00052.mha  00053.mha  00061.mha  00064.mha  00068.mha
Track/Data/2D Cine Images/: 00005.mha  00007.mha  00011.mha  00015.mha  00018.mha  00027.mha  00040.mha  00045.mha  00047.mha  00048.mha  00051.mha  00054.mha  00057.mha  00059.mha  00063.mha  00067.mha  00070.mha
Track/Resources/Icons/: Track.png.REMOVED.git-id
Track/Resources/UI/: Track.ui
Track/utils/: Helper.py  TrackLogic.py
TrackingDataProcessor/: .gitignore  README.md  TrackingDataProcessor.cpp  TrackingDataProcessor.sln  TrackingDataProcessor.vcxproj
